# MyLocalServerESC_v0.1

./: CMakeLists.txt  ystemctl status bluetooth
inc/: main.hpp  module.hpp  shared_data.hpp
src/: main.cpp  module.cpp  shared_data.cpp
